Add GitHub Actions deployment and fix backend health check
- Add /health endpoint with version tracking
- Fix duplicate sub-accounts bug in budget store
- Add automated deployment workflow
- Update .gitignore for security
- Add cleanup script for duplicate sub-accounts
- Add deployment documentation

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,25 @@ Thumbs.db
 
 # Claude
 .claude/
+
+# SSH Keys (NEVER commit these!)
+*.pem
+id_rsa
+id_rsa.pub
+id_ed25519
+id_ed25519.pub
+github_actions_*
+
+# Docker
+docker-compose.override.yml
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Backup files
+*.backup
+*.bak
